Unexpected error - Replicated by dragging elements around then changing their mode of transport. Error was in departureTime.toLocaleString. Made it conditional and Error seems to have been fixed.
Removed min-height from travel instructions. Was causing layout issues.
Prevent return address overflowing

--- a/client/src/sections/Destinations.css
+++ b/client/src/sections/Destinations.css
@@ -343,7 +343,6 @@
 
 .drag-handle {
     position: absolute;
-    top: 40%;
     cursor: grab;
     z-index: 99;
 }
