--- a/client/src/sections/ReturnLocation.css
+++ b/client/src/sections/ReturnLocation.css
@@ -18,6 +18,8 @@
     width: 80%;
     display: flex;
     align-items: center;
+    text-wrap-mode: nowrap;
+    overflow-x: hidden;
 }
 
 .ring.return {
